fix sizing on buttons: copy button would resize and qr code out of bounds of button

--- a/client/src/components/LinkDisplay/Style.module.css
+++ b/client/src/components/LinkDisplay/Style.module.css
@@ -41,7 +41,7 @@
   border-width: 1px;
   font-family: inherit;
   font-size: 18px;
-  width: 60px;
+  width: 50px;
   height: 40px;
   border-radius: 5px;
   cursor: pointer;
